--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div id="gameContainer"></div>
-    <button id="beginButton">Begin</button>
+    <div id="controls">
+        <input type="range" id="randomnessSlider" min="10" max="200" value="40">
+        <input type="range" id="speedSlider" min="2" max="8" value="3">
+    </div>   
+    <button id="fightButton">FIGHT!</button>
     <script src="main.js"></script>
 </body>
 </html>
